app.scss
---
---
@import "variables";

@import url("https://fonts.googleapis.com/css?family=Roboto:300,400");

@import "paper.bootstrap.css";

body {
  background: $lighter;
  font-family: 'Roboto';
  line-height: 1.618;
  letter-spacing: normal;
  color: $black;
}

h1,h2,h3,h4,h5,h6 {
  font-weight: 400;
  color: $black;
}

strong {
  font-weight: 500;
}

a {
  -webkit-transition: none;
  -o-transition: all 0;
  transition: none;
  color: $link-color;
}

p {
  font-size: medium;
  font-weight: 300;
}

.panel {
  background-color: $white;
}

.navbar {
  border-radius: 0;
}

.navbar-brand {
  padding: 20px 15px;
  img {
    height: 100%;
  }
}

.navbar-nav .fa {
  margin-right: 4px;
}

.navbar-default .navbar-nav > li > a {
  color: $black;
}

.social-icons {
  display: table;
  span {
    display: table-cell;
    vertical-align: middle;
    padding-right: 32px;
    color: $black;
    letter-spacing: 0px;
    font-weight: 400;
  }
  a {
    color: #555;
    display: table-cell;
    vertical-align: middle;
    text-decoration: none;
    float: left;
    margin-right: 10px;
    i {
      transition-duration: 500ms;
    }
  }
}

.social-icons {
  a {
    i:hover {
      color: $black;
    }
  }
}

.post-preview {
  a {
    i {
      transition-duration: 500ms;
    }
  }
}

.post-preview:hover {
  a {
    i {
      padding-left: 10px;
    }
  }
}

.margin-bottom-0 {
  margin-bottom: 0;
}

@import "post";

